[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Interactables/nextLevelDoor.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/interactables/doors.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7365, 14.8453 )

[node name="nextLevelDoor" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="usePrompt" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -18.329 )
[connection signal="body_entered" from="." to="." method="_on_nextLevelDoor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_nextLevelDoor_body_exited"]
